--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Webpack example</title>
+    <link rel="stylesheet" href="public/stylesheets/styles.css"/>
   </head>
   <body>
     <div id="content"></div>
